deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: basf-mongodb-service
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: basf-challenge-service
  name: basf-challenge-service
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: basf-challenge
  type: ClusterIP
status:
  loadBalancer: { }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: basf-challenge
  name: basf-challenge-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basf-challenge
  strategy: { }
  template:
    metadata:
      labels:
        app: basf-challenge
    spec:
      containers:
        - image: lperilla/challenges:basf-challenge
          name: basf-challenge
          resources: { }
          volumeMounts:
            - name: basf-storage
              mountPath: /applis/basf
      volumes:
        - name: basf-storage
          emptyDir: { }
status: { }
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basf-challenge
spec:
  ingressClassName: basf-challenge-ingress
  rules:
    - http:
        paths:
          - path: /actuator/health
            pathType: ImplementationSpecific
            backend:
              service:
                name: basf-challenge-service
                port:
                  number: 8080
